Revert "[60535] CKEditor logo z-index bug (#21041)"
This reverts commit 27fcdf4b869e579f80e75eca4d9d9b1b9e163adf.

--- a/frontend/src/global_styles/content/editor/_ckeditor.sass
+++ b/frontend/src/global_styles/content/editor/_ckeditor.sass
@@ -93,7 +93,7 @@ opce-ckeditor-augmented-textarea .op-ckeditor--attachments
   .document-editor__toolbar
     position: sticky
     top: 0
-    z-index: var(--ck-z-panel)
+    z-index: 2
 
     // Reset these styles explicitly when the editor is opened inside a Dialog, as position: sticky opens a separate stacking context.
     // In case the dialog has multiple editors below each other, these different context interfere and the paragraph dropdown of an editor will be behind the editor below it.
